[package]
name = "jobserver"
version = "0.1.0"
authors = ["mark-i-m"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["job server", "jobs", "tasks", "cluster", "automate", "experiments", "cluster manager"]
repository = "https://github.com/mark-i-m/jobserver"
description = """
This is a job server and client for running many experiments across many test
platforms. In some sense, it is like a simple cluster manager.
"""
categories = ["science"]

[dependencies]
serde = { version = "1.0.94", features = ["derive"] }
serde_json = "1.0.40"
log = "0.4.7"
clap = "2.33.0"
libc = "0.2.60"
prettytable-rs = "0.8.0"
itertools = "0.8.0"
csv = "1.1.1"
failure = "0.1.5"
log4rs = "0.8.3"
chrono = "0.4.9"
