[package]
name = "expjobserver"
version = "0.9.2"
authors = ["mark-i-m"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["jobs", "tasks", "cluster", "automate", "experiments"]
repository = "https://github.com/mark-i-m/jobserver"
description = """
This is a job server and client for running many experiments across many test
platforms. In some sense, it is like a simple cluster manager.
"""
categories = ["science"]

[[bin]]
name = "j"
path = "src/bin/client/main.rs"

[[bin]]
name = "expjobserver"
path = "src/bin/server/main.rs"

[dependencies]
log = "0.4.7"
clap = "2.33.0"
libc = "0.2.60"
prettytable-rs = "0.8.0"
console = "0.12.0"
itertools = "0.8.0"
csv = "1.1.1"
failure = "0.1.5"
log4rs = "0.8.3"
chrono = "0.4.9"
prost = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fs_extra = "1.2.0"
glob = "0.3.0"
rayon = "1.5.0"

[build-dependencies]
prost-build = "0.6"

[profile.release]
opt-level = 1
debug = true
